# api

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/controllers/: auth.rs
src/models/: user_model.rs
src/routes/users/: login.rs  register.rs
