[package]
name = "linkship-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bcrypt = "0.14.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = "2.6.0"
regex = "1.8.4"
serde = "1.0.164"
serde_json = "1.0.99"
